syntax = "proto3";

option go_package = "server";

package req_pq;

service ReqPqService {
  rpc RequestPq (RequestPqRequest) returns (RequestPqResponse) {}
}

message RequestPqRequest {
  string nonce = 1;
  int32 message_id = 2;
}

message RequestPqResponse {
  string nonce = 1;
  string server_nonce = 2;
  int32 message_id = 3;
  int32 p = 4;
  int32 g = 5;
}